Fix profile picture misalignment

--- a/Profile Folder/chrome/styles/partials/chrome/chrome-5/_toolbars.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-5/_toolbars.scss
@@ -388,7 +388,7 @@
 				width: 34px !important;
 				height: 34px !important;
 				border-radius: 50px !important;
-				margin-bottom: 4px !important;
+				margin-bottom: 2px !important;
 				box-shadow: 0 1px 1px rgb(0, 0, 0, 30%);
 			}
 		}
