--- a/Profile Folder/chrome/userChrome.css
+++ b/Profile Folder/chrome/userChrome.css
@@ -1213,7 +1213,7 @@
   width: 34px !important;
   height: 34px !important;
   border-radius: 50px !important;
-  margin-bottom: 4px !important;
+  margin-bottom: 2px !important;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
 }
 :root:not([profilepic=firefox]) #fxa-toolbar-menu-button #fxa-avatar-image {
